# penguin

./: CMakeLists.txt  CONTRIBUTING.md  README.md
docs/: ARCHITECTURE.md
examples/: operators.pg
grammar/: grammar.txt
include/compiler/: chunk.h
include/compiler/utils/: deserializer.h  serializer.h
include/dependency_graph/: dependency_graph.h  dependency_scanner.h
include/exceptions/: error.h
include/interpreter/: environment.h  expr_evaluator.h  interpreter.h  runtime_value.h
include/lexer/: lexer.h
include/loader/: module_loader.h
include/manifest/: manifest.h  manifest_loader.h  manifest_parser.h
include/parser/: ast.h  parser.h
include/symbol_table/: value.h
include/utils/: utils.h
include/vm/: compiler.h  opcode.h  value.h  vm.h
include/vm/utils/: deserializer.h  serializer.h  value_utils.h
src/: main.cpp  test_vm.cpp
src/compiler/: chunk.cpp  compiler_core.cpp  compiler_expr.cpp  compiler_stmt.cpp
src/compiler/utils/: deserializer.cpp  serializer.cpp
src/dependency_graph/: dependency_graph.cpp  dependency_scanner.cpp
src/interpreter/: environment.cpp  expr_evaluator.cpp  interpreter.cpp
src/lexer/: lexer.cpp
src/loader/: module_loader.cpp
src/manifest/: manifest_loader.cpp  manifest_parser.cpp
src/parser/: parser.cpp
src/utils/: utils.cpp
src/vm/: compiler_core.cpp  compiler_expr.cpp  compiler_stmt.cpp  vm.cpp  vm_array.cpp  vm_builtins.cpp  vm_call.cpp  vm_class.cpp  vm_helper.cpp  vm_ops.cpp  vm_trait.cpp
src/vm/utils/: deserializer.cpp  serializer.cpp  value_utils.cpp
tests/: test_parser.cpp  test_parser_arrays.cpp
